--- a/silicom.com/product1.html
+++ b/silicom.com/product1.html
@@ -59,7 +59,7 @@ function MM_effectGrowShrink(targetElement, duration, from, to, toggle, referHei
         <li class="pm_content1">&#8226;國際認證: 美國FDA食品級認證, RoHS歐盟認證, REACH高關注物質認證, SGS無毒檢測。</li>
       </ul>
     </div>
-      <div style="width:620px; margin-left:245px; float:left;">
+      <!--<div style="width:620px; margin-left:245px; float:left;">
           <div style="width:100%;text-align:right;font-size:14px;text-decoration:line-through;color:red;">
             原價:680
           </div>
@@ -87,13 +87,13 @@ function MM_effectGrowShrink(targetElement, duration, from, to, toggle, referHei
 	        <a href="https://www.facebook.com/#!/pages/%E7%9F%BD%E8%86%A0%E4%BF%9D%E9%AE%AE%E8%86%9C/147450108765453">
 	        <img src="images/FB_LIKE50.gif" alt="FB_Like" width="57" height="25" border="0" /></a></span>
  	      </div>
-	  </div>    
+	  </div>
       <div style="width:620px; margin-left:245px; float:left;">
 	      <div style="float:right;">
           	<div style="text-align:right;font-size:12px;">*一捲價格含運費80元，兩捲以上免運費</div>
     	  	<p>*按下上方的"立即購"使用Paypal下單付款，或至<a href="product4.html">購物流程</a>閱讀其他下單程序</p>
 	      </div>
-      </div>
+      </div>-->
   </div>
   <div id="pcontent1">
   <div id="p1topic1">使用範圍</div>
