--- a/silicom.com/product4.html
+++ b/silicom.com/product4.html
@@ -44,10 +44,10 @@ function MM_effectGrowShrink(targetElement, duration, from, to, toggle, referHei
     <div id="pm1_spec">
       <ul>
         <li class="pm_content">購物流程</li>
-        <li class="pm_content1">A.</li>
+        <!--<li class="pm_content1">A.</li>
         <li class="pm_content1">1.至<a href="product1.html">商品規格</a>頁中，選取購買數量</li>
         <li class="pm_content1">1.確認數量無誤後點擊「立即購」，以Paypal下單付款</li>
-        <li class="pm_content1">B.</li>
+        <li class="pm_content1">B.</li>-->
         <li class="pm_content1">1.聯絡賜您康索取訂購單</li>
         <li class="pm_content1" style="padding-left:40px;">a. 電話: 02-2908-7519、0983-199-504</li>
         <li class="pm_content1" style="padding-left:40px;">b. 傳真: 02-2905-0644</li>
@@ -55,7 +55,10 @@ function MM_effectGrowShrink(targetElement, duration, from, to, toggle, referHei
         <li class="pm_content1">2.收到訂購單後填寫完整資訊</li>
         <li class="pm_content1">3.填寫完畢後以E-mail或傳真回傳訂購單，將會有專人與您聯繫確認</li>
         <li class="pm_content1">4.訂單確認無誤後請依訂單指示匯款</li>
-        <li class="pm_content1">5.收到匯款後即會立即為您安排出貨</li>
+        <li class="pm_content1" style="padding-left:40px;">匯款資料:日進光電股份有限公司</li>
+        <li class="pm_content1" style="padding-left:40px;">銀行代號:中國信託 承德分行822</li>
+        <li class="pm_content1" style="padding-left:40px;">匯款帳號:6245-4009-0273</li>
+        <li class="pm_content1">5.收到匯款後即會立即為您安排出貨，匯款後請來電通知。<BR />下午 4點前完成 匯款 通知 將可於 1個工作天後到貨。 個工作天後到貨。 個工作天後到貨。 個工作天後到貨。 5點以後完 成匯款通知將於 成匯款通知將於 2個工作天後到貨。 個工作天後到貨。</li>
       </ul>
     </div>
   </div>
